Adicionando os arquivos para uso do Display
Adicionando a biblioteca do professor Wilton para a manipulação do
display.

Adicionando o arquivo de fontes.

Adicionando a biblioteca hardware_i2c na função 'target_link_libraries'
no arquivo CMakeLists.

Adicionando o arquivo ssd1306.c na função 'add_executables' no arquivo
CMakeLists.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable(embarcatech-u4-c6-tarefa1
     embarcatech-u4-c6-tarefa1.c
     src/matriz_leds.c
     src/interruption.c
+    src/ssd1306.c
 )
 
 # Generate PIO header
@@ -64,6 +65,7 @@ target_include_directories(embarcatech-u4-c6-tarefa1 PRIVATE
 # Add any user requested libraries
 target_link_libraries(embarcatech-u4-c6-tarefa1 
     hardware_pio
+    hardware_i2c
 )
 
 pico_add_extra_outputs(embarcatech-u4-c6-tarefa1)
