Adicionando o arquivo main.c
Incluindo diretivas para definição das seguintes GPIO's:

Conexão com o LED RGB.
Conexão com a matriz de LED's.
Conexão com os botões A e B.
Conexão com o Display OLED.

Incluindo diretiva para configurar o intervalo de debouncing.

Adicionando o arquivo main na função 'add_executable' do arquivo
CMakeLists.txt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ pico_sdk_init()
 # Add executable. Default name is the project name, version 0.1
 
 add_executable(embarcatech-u4-c6-tarefa1
-    embarcatech-u4-c6-tarefa1.c
+    src/main.c
     src/matriz_leds.c
     src/interruption.c
     src/ssd1306.c
